feat: Añadir soporte para gestión de tickets GLPI, incluyendo DTOs y servicios para obtener información detallada de tickets y técnicos asignados